update sql advance

--- a/Python/Extras/python-101/101_exercises.ipynb
+++ b/Python/Extras/python-101/101_exercises.ipynb
@@ -8,9 +8,28 @@
    "source": [
     "# Welcome to 101 Exercises for Python Fundamentals\n",
     "\n",
+    "\n",
+    "\n",
+    "Source: github/ryanorsinger/101-exercises\n",
+    "\n",
+    "\n",
     "Solving these exercises will help make you a better programmer. Solve them in order, because each solution builds scaffolding, working code, and knowledge you can use on future problems. Read the directions carefully, and have fun!\n",
     "\n",
     "> \"Learning to program takes a little bit of study and a *lot* of practice\" - Luis Montealegre"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "mUMajapitLCg"
+   },
+   "source": [
+    "## Getting Started\n",
+    "1. Go to https://colab.research.google.com/github/ryanorsinger/101-exercises/blob/main/101-exercises.ipynb\n",
+    "2. To save your work to your Google Drive, go to File then \"Save Copy in Drive\".\n",
+    "3. Your own work will now appear in your Google Drive account!\n",
+    "\n",
+    "If you need a fresh, blank copy of this document, go to https://colab.research.google.com/github/ryanorsinger/101-exercises/blob/main/101-exercises.ipynb and save a fresh copy in your Google Drive."
    ]
   },
   {
